fix overflow:hidden

--- a/src/components/banner/banner.scss
+++ b/src/components/banner/banner.scss
@@ -2,6 +2,7 @@
 
 .banner {
     position: relative;
+    overflow: hidden;
     @include flex;
     border-radius: 25px;
     background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
